app/assets/stylesheets/custom/chat.scss
#app {
  min-width: unset;
}

#app > #chat {
  position: fixed;
  bottom: 0;
  right: 0;
  display: none;
}

#chat .well-chat {
  padding: 8px 15px 0px 15px;
  margin: 0px;
}

.container {
  max-width: 100%;
  margin: 0;
  background: white;
}

.content {
  margin-right: 0 !important;
}

.avatar--unique {
  line-height: 40px !important;
}

//////////////////////////////////
// Contacts
//////////////////////////////////
.contacts {
  background: white;
  padding-right: 0;
  padding-left: 0;
  width: 25%;
  height: 100vh;
  float: left;
  border-right: 1px solid rgba(0,0,0,.12);
}

@media screen and (max-width: 767px) {
  .NavBarAdmin.sidebar, .NavBarProfile.sidebar {
    width: 70px;
  }
}

@media screen and (max-width: 550px) {
  .NavBarAdmin.sidebar, .NavBarProfile.sidebar {
    width: 50px;
  }
}

@media screen and (max-width: 991px) and (min-width: 0px) {
  .contacts {
    width: 100%;
    height: calc(100vh - 90px) !important;
  }

  .message_board {
    display: none;
    height: calc(100vh - 90px) !important;
  }

  .message_board audio, .message_board video, .message_board image {
    width: 175px !important;
  }

  .customer_detail {
    display: none;
  }

  .deactive-window {
    display: none !important;
  }

  .active-window {
    width: 100% !important;
  }

  .nv-message-board-header {
    display: flex !important;
  }

  .nv-message-board-header .nv-back-contacts {
    display: block !important;
  }

  .nv-message-board-header .nv-go-detail {
    display: block !important;
  }

  .customer_detail .nv-back-messages {
    display: block !important;
  }
}

html[dir="rtl"] {
  .nv-item-time {
    float: left;
  }
  .nv-options {
    float: left;
  }
  .nv-customer-header > div:nth-child(2) {
    float: right !important;
    padding-right: 0 !important;
    padding-left: 16px !important;
  }
}

.deactive-window {
  display: block;
}

.nv-search {
  display: flex;
  align-items: center;
  height: 60px;
}

.nv-contact-search {
  border: none;
  padding: 0px 20px;
  margin-left: 10px;
  margin-right: 10px;
}

.nv-tabs {
  display: flex;
  border-bottom: 1px solid rgba(0,0,0,.12);
  cursor: pointer;
}

.nv-tab {
  width: 50%;
  text-align: center;
  padding-top: 20px;
  padding-bottom: 20px;
  color: black;
}

.nv-tab-active {
  color: black !important;
  border-bottom: 3px solid #0072aa;
}

.nv-scrollable {
  overflow-y: auto;
  height: calc(100% - 64px);
}

.nv-items {
  list-style: none;
  padding: 0;
  margin: 0;
}

.nv-item {
  align-items: center;
  color: #5d5d5d;
  border-bottom: 1px solid rgba(0,0,0,.12);
  padding: 0;
}

.nv-item-active {
  background: #dcdcdc;
  color: #333;
  position: relative;
  border-bottom: 1px solid rgba(0,0,0,.12);
}

.nv-item > a {
  display: flex;
  align-items: center;
  padding: 15px 20px;
  color: inherit;
}

.nv-item-avatar {
  position: relative;
  top: 3px;
  margin-right: 12px;
}

.nv-body {
  -webkit-box-flex: 1;
  flex-grow: 1;
}

.nv-name {
  display: block;
  margin-bottom: 4px;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.nv-item-time {
  font-size: 10px;
  color: #858585;
  position: relative;
  top: 3px;
  float: right;
}

.nv-recent-message {
  font-size: 12px;
  overflow-wrap: anywhere;
  display: block;
}

.nv-item-active .nv-recent-message {
  color: rgba(0,0,0,.6);
}

//////////////////////////////
// Message Board
//////////////////////////////
.message_board {
  height: 100vh;
  padding: 0px;
  width: 50%;
  float: left;
  background: white;
}

.nv-message-board-header {
  width: 100%;
  padding: 20px;
  color: black;
  background: white;
  border-bottom: 1px solid rgba(0,0,0,.12);
  height: 64px;
}

.nv-message-board-header .nv-customer-name {
  float:left;
  width: 30%;
  text-align: left;
}

.nv-message-board-header .nv-back-contacts {
  float: left;
  display: none;
  padding-right: 20px;
}

.email-subject {
  border: 0 dashed;
  border-bottom-width: 1px;
  margin-bottom: 10px;
}

.nv-message-board-header .nv-go-detail {
  width: 30%;
  text-align: right;
  display: none;
}

.dropzone {
  z-index: 99;
  background: image_url("/assets/images/whatsapp-bg.jpg") !important;
}

///////////////////////////
.dropp {
  position: absolute;
  z-index: 100;
  max-width: 200px;
}

.dropp-header {
  //background: #242424;
  font-size: 12px;
  color: black;
  border-bottom: 2px solid #0072aa;
  align-items: stretch;
  display: flex;
  flex-direction: row;
  -ms-flex-direction: row;
  -webkit-box-pack: start;
  -moz-box-pack: start;
  justify-content: flex-start;
  -ms-flex-pack: start;
}

.dropp-header__title {
  padding: 3px 6px;
  flex: 8;
  display: inline-block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
}

.dropp-header__btn {
  display: block;
  //background: #1c1c1c;
  color: black;
  padding: 3px;
  flex: 1;
  transition: all 0.3s ease-in-out;
}

.dropp-header__btn .icon {
  transform: rotate(-90deg);
  display: block;
  position: relative;
  width: 1.5em;
  height: 1.5em;
  margin: 0 auto;
}

.dropp-header__btn .icon:before,
.dropp-header__btn .icon:after {
  top: 30%;
  left: 25%;
  width: 50%;
  height: 15%;
  background: #0072aa;
  transform: rotate(-45deg);
  content: "";
  position: absolute;
}

.dropp-header__btn .icon:after {
  top: 55%;
  transform: rotate(45deg);
}

.dropp-header__btn.js-open .icon {
  transform: rotate(90deg);
}

.dropp-header__btn.js-open .icon:before,
.dropp-header__btn.js-open .icon:after {
  background: #0072aa;
}

.dropp-header__btn:focus { outline: none; }

.dropp-body {
  overflow: hidden;
  width: 100%;
  max-height: 0;
  background: white;
  color: black;
  transition: all 0.3s ease-in-out;
  box-shadow: 0 1px 3px #d8d6d6;
}

.dropp-body.js-open { max-height: 20em; }
/* ... */

